# enpass-vault

./: Cargo.toml
.github/workflows/: ci.yml
examples/: add_test_items.rs  create_test_vault.rs
src/: format.rs  lib.rs  tests.rs
src/tests/: write_errors.rs
tests/: integration_tests.rs
tests/fixtures/test_vault/: vault.enpassdb  vault.json
