[package]
name = "enpass_vault"
version = "0.1.0"
edition = "2024"
description = "Library for reading Enpass password vaults"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
pbkdf2 = "0.12"
sha1 = "0.10"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
